add shopCartActivity & confirmOrdersActivity & fix some fuss bugs

--- a/app/src/main/res/layout/activity_confirm_orders.xml
+++ b/app/src/main/res/layout/activity_confirm_orders.xml
@@ -6,6 +6,31 @@
               android:orientation="vertical"
               android:background="@color/colorWhiterLight">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:background="#1f9bd4">
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left|center_vertical"
+            android:layout_marginLeft="20dp"
+            android:background="@android:color/transparent"
+            android:src="@mipmap/nav_back"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="#ffffff"
+            android:textSize="22sp"
+            android:text="确认订单"/>
+    </FrameLayout>
+
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -14,31 +39,6 @@
         <LinearLayout android:orientation="vertical"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent">
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:background="#1f9bd4">
-
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left|center_vertical"
-                    android:layout_marginLeft="20dp"
-                    android:background="@android:color/transparent"
-                    android:src="@mipmap/nav_back"
-                    />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:textColor="#ffffff"
-                    android:textSize="22sp"
-                    android:text="确认订单"/>
-            </FrameLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -57,13 +57,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         android:text="收货人："/>
 
                     <TextView
+                        android:id="@+id/txtview_confirm_order_recipient"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
+                        android:maxLines="1"
+                        android:maxLength="10"
                         android:textSize="16sp"
                         android:text="王皓"/>
 
@@ -74,6 +77,7 @@
                         android:background="@color/colorTransparent"/>
 
                     <ImageButton
+                        android:id="@+id/imgbtn_confirm_order_modify_address_info"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
@@ -85,7 +89,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
+                    android:layout_marginTop="5dp"
                     android:orientation="horizontal">
 
                     <ImageView
@@ -99,10 +103,21 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_weight="1"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginLeft="5dp"
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/txtview_confirm_order_default_phone"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="left|center_horizontal"
+                            android:singleLine="true"
+                            android:maxLines="1"
+                            android:textSize="12sp"
+                            android:text="收货人手机号码：15223635486"/>
+
+                        <TextView
+                            android:id="@+id/txtview_confirm_order_default_address"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="left|center_horizontal"
@@ -111,14 +126,6 @@
                             android:textSize="12sp"
                             android:text="详细地址：中山西路·1600号兆丰环球科技大厦27楼C室"/>
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="left|center_horizontal"
-                            android:singleLine="true"
-                            android:maxLines="1"
-                            android:textSize="12sp"
-                            android:text="收货人手机号码：15223635486"/>
 
                     </LinearLayout>
 
@@ -140,12 +147,26 @@
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
                     android:text="订单商品"/>
+                <TextView
+                    android:id="@+id/txtview_confirm_order_supplier"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:layout_marginTop="5dp"
+                    android:drawableLeft="@mipmap/product_shop"
+                    android:drawablePadding="8dp"
+                    android:text="上海随心订"/>
 
-                <android.support.v7.widget.RecyclerView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
 
             </LinearLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rclview_confirm_order_product_lists"
+                android:layout_marginTop="1dp"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:paddingBottom="2dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -154,38 +175,6 @@
                 android:background="@color/colorWhiterPure"
                 android:orientation="vertical">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="12sp"
-                        android:text="使用红包"/>
-
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="@color/colorTransparent"/>
-
-                    <ImageButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:background="@color/colorTransparent"
-                        android:src="@mipmap/forward"/>
-
-                </LinearLayout>
-
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/colorWhiteLighter"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -202,12 +191,14 @@
 
 
                     <TextView
+                        android:id="@+id/txtview_confirm_order_total_points"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="12sp"
-                        android:text="共9000积分，可抵扣5元"/>
+                        android:text="共9000积分"/>
 
                     <ImageButton
+                        android:id="@+id/imgbtn_confirm_order_popup_points_rule"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
@@ -220,6 +211,7 @@
                         android:layout_weight="1"/>
 
                     <CheckBox
+                        android:id="@+id/checkbox_confirm_order_if_use_points"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:button="@drawable/selector_checkbox_btn"
@@ -228,13 +220,14 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/ll_confirm_order_use_point"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="10dp"
+                    android:padding="10dp"
                     android:visibility="gone"
                     android:orientation="horizontal"
                     android:gravity="center_vertical"
-                    android:background="@color/colorWhiteLighter">
+                    android:background="@color/colorWhiterBgLight">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -243,9 +236,11 @@
                         android:text="选择积分"/>
 
                     <com.brightdairy.personal.brightdairy.view.AddSubtractionBtn
+                        android:id="@+id/addsubbtn_confirm_order_select_points"
                         android:layout_width="90dp"
-                        android:layout_height="50dp"
+                        android:layout_height="wrap_content"
                         app:min_value="500"/>
+
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -270,10 +265,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|left"
-                    android:textSize="12sp"
+                    android:textSize="10sp"
                     android:text="是否安装奶箱"/>
 
                 <CheckBox
+                    android:id="@+id/checkbox_confirm_order_if_install_box"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|right"
@@ -300,10 +296,11 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical|left"
-                        android:textSize="12sp"
+                        android:textSize="10sp"
                         android:text="总计金额"/>
 
                     <TextView
+                        android:id="@+id/txtview_confirm_order_total_cost"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical|right"
@@ -328,16 +325,17 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical|left"
-                        android:textSize="12sp"
-                        android:text="满减活动"/>
+                        android:textSize="10sp"
+                        android:text="积分抵扣"/>
 
                     <TextView
+                        android:id="@+id/txtview_confirm_order_points_sub"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical|right"
                         android:textSize="12sp"
                         android:textColor="@color/colorRedDarker"
-                        android:text="-￥70.0"/>
+                        android:text="-70.0元"/>
 
                 </FrameLayout>
 
@@ -357,16 +355,17 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical|left"
-                        android:textSize="12sp"
+                        android:textSize="10sp"
                         android:text="红包抵扣"/>
 
                     <TextView
+                        android:id="@+id/txtview_confirm_order_promotion_sub"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical|right"
                         android:textSize="12sp"
                         android:textColor="@color/colorRedDarkerBtn"
-                        android:text="-￥15.0"/>
+                        android:text="-15.0元"/>
 
                 </FrameLayout>
 
@@ -386,10 +385,11 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical|left"
-                        android:textSize="12sp"
+                        android:textSize="10sp"
                         android:text="可获积分"/>
 
                     <TextView
+                        android:id="@+id/txtview_confirm_order_get_points"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical|right"
@@ -421,16 +421,16 @@
             android:layout_gravity="center_vertical"
             android:padding="10dp"
             android:textSize="16sp"
-            android:text="还需支付"/>
+            android:text="还需支付："/>
 
         <TextView
+            android:id="@+id/txtview_confirm_order_need_cost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:padding="10dp"
             android:textSize="16sp"
             android:textColor="@color/colorRedDarker"
-            android:text="￥155.0"/>
+            android:text="155.0元"/>
 
         <View
             android:layout_width="0dp"
@@ -439,6 +439,7 @@
             android:background="@color/colorTransparent"/>
 
         <Button
+            android:id="@+id/btn_confirm_order_confirm"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
