--- a/app/src/main/res/drawable/shape_line_lineout.xml
+++ b/app/src/main/res/drawable/shape_line_lineout.xml
@@ -6,6 +6,8 @@
 
     <corners android:radius="2dp"/>
 
+    <padding android:bottom="2dp" android:left="2dp" android:right="2dp" android:top="2dp"/>
+
     <stroke android:width="1dp" android:color="@color/colorWhiterLight"/>
 
 </shape>
