--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -3,6 +3,7 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:background="@color/colorWhiterLight"
               android:orientation="vertical">
 
     <FrameLayout
@@ -80,29 +81,24 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:padding="10dp"
                         android:orientation="horizontal">
 
                         <TextView
                             android:id="@+id/txtview_product_detail_name"
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:padding="10dp"
+                            android:layout_weight="1"
                             android:layout_gravity="center|left"
                             android:textSize="20sp"
                             android:textStyle="bold"
                             android:textColor="@color/colorTxtBlack"
                             />
 
-                        <View
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"/>
-
                         <CheckBox
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="right|center"
-                            android:padding="10dp"
                             android:button="@drawable/selector_product_detail_share_bg"
                             android:textColor="@drawable/selector_product_detail_share_txt"
                             android:checked="false"
@@ -223,58 +219,71 @@
                 app:cardElevation="0dp"
                 android:layout_marginTop="10dp">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left|top"
-                    android:padding="10dp"
-                    android:textColor="@color/colorBlackLight"
-                    android:text="已    选："/>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
                     android:padding="10dp"
-                    android:gravity="left|top"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:textColor="@color/colorBlackLight"
+                        android:text="已    选："/>
+
+                    <LinearLayout
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/colorTxtBlack"
-                        android:lines="1"
-                        android:text="配送时间：2016-04-01到2016-04-30"/>
-                    <TextView
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/txtview_product_detail_send_time"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/colorTxtBlack"
+                            android:lines="1"
+                            android:textSize="10sp"
+                            android:text="配送时间：2016-04-01到2016-04-30"/>
+                        <TextView
+                            android:id="@+id/txtview_product_detail_send_mode"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/colorTxtBlack"
+                            android:textSize="12sp"
+                            android:lines="1"
+                            android:text="配送模式：每日送"/>
+                        <TextView
+                            android:id="@+id/txtview_product_detail_unit_quantity"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/colorTxtBlack"
+                            android:textSize="12sp"
+                            android:lines="1"
+                            android:text="每次配送：1份"/>
+                        <TextView
+                            android:id="@+id/txtview_product_detail_total_amount"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/colorTxtBlack"
+                            android:textSize="12sp"
+                            android:lines="1"
+                            android:text="总数量：共19份"/>
+
+                    </LinearLayout>
+
+                    <ImageButton
+                        android:id="@+id/imgbtn_select_send_mode"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/colorTxtBlack"
-                        android:lines="1"
-                        android:text="配送模式：每日送"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/colorTxtBlack"
-                        android:lines="1"
-                        android:text="每次配送：1份"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/colorTxtBlack"
-                        android:lines="1"
-                        android:text="总数量：共19份"/>
+                        android:layout_gravity="top"
+                        android:src="@mipmap/forward"
+                        android:background="@color/colorTransparent"
+                        />
 
                 </LinearLayout>
 
-                <ImageButton
-                    android:id="@+id/imgbtn_select_send_mode"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right|top"
-                    android:padding="10dp"
-                    android:src="@mipmap/forward"
-                    android:background="@color/colorTransparent"
-                    />
 
             </android.support.v7.widget.CardView>
 
