--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,9 @@
     <color name="colorBarBgBlue">#FF4081</color>
 
     <color name="colorWhiterPure">@android:color/white</color>
+    <color name="colorWhiterBgLight">#F8F8F8</color>
     <color name="colorWhiterDarker">#D3D3D3</color>
-    <color name="colorWhiterLight">#F5F5F5</color>
+    <color name="colorWhiterLight">#EBEBEB</color>
     <color name="colorWhiteLighter">#ebebeb</color>
     <color name="colorWhiteOpacity">#5affffff</color>
 
