--- a/app/src/main/res/layout/activity_local_send_order_address.xml
+++ b/app/src/main/res/layout/activity_local_send_order_address.xml
@@ -31,6 +31,7 @@
     </FrameLayout>
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/rclview_modify_address_adress_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"/>
@@ -42,6 +43,7 @@
         android:background="@color/colorRedDarkerBtn">
 
         <Button
+            android:id="@+id/btn_modify_address_add_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
