--- a/app/src/main/res/layout/activity_shop_cart.xml
+++ b/app/src/main/res/layout/activity_shop_cart.xml
@@ -16,7 +16,7 @@
                   android:orientation="vertical"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
-                  android:background="@color/colorWhiterDarker">
+                  android:background="@color/colorWhiterLight">
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -58,6 +58,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginTop="10dp"
             android:background="@color/colorWhiterPure">
 
             <TextView
@@ -67,6 +68,7 @@
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:paddingLeft="10dp"
+                android:textSize="16sp"
                 android:text="合计金额："/>
 
             <TextView
@@ -77,6 +79,7 @@
                 android:layout_gravity="center_vertical"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
+                android:textSize="16sp"
                 android:singleLine="true"
                 android:textColor="@color/colorRedDarker"
                 android:text="￥12"/>
@@ -89,6 +92,7 @@
                 android:layout_gravity="center_vertical"
                 android:background="@color/colorRedDarkerBtn"
                 android:textColor="@color/colorWhiterPure"
+                android:textSize="16sp"
                 android:text="去结算"/>
 
         </LinearLayout>
