--- a/app/src/main/res/layout/fragment_home_page_home.xml
+++ b/app/src/main/res/layout/fragment_home_page_home.xml
@@ -19,6 +19,7 @@
                       app:layout_behavior="com.brightdairy.personal.brightdairy.view.Behavior.HomeTopSearchBg">
 
                 <TextView
+                    android:id="@+id/txtview_home_show_or_select_city"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="14dp"
