--- a/app/src/main/res/layout/item_address_info.xml
+++ b/app/src/main/res/layout/item_address_info.xml
@@ -2,10 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:layout_marginTop="10dp"
-              android:paddingLeft="10dp"
-              android:paddingRight="10dp"
-              android:paddingTop="10dp"
               android:orientation="vertical"
               android:background="@color/colorWhiterPure">
 
@@ -13,6 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:orientation="horizontal">
 
 
@@ -39,6 +36,7 @@
             android:textSize="13sp"
             android:text="15253636545"/>
 
+
     </LinearLayout>
 
 
@@ -47,7 +45,7 @@
         android:id="@+id/txtview_item_address_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="10dp"
+        android:padding="10dp"
         android:drawablePadding="5dp"
         android:drawableLeft="@mipmap/address_local"
         android:singleLine="true"
@@ -60,7 +58,6 @@
         android:id="@+id/view_item_address_divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="10dp"
         android:background="@color/colorWhiteLighter"/>
 
 
@@ -68,34 +65,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
+        android:padding="10dp"
         android:orientation="horizontal">
 
         <CheckBox
             android:id="@+id/checkbox_item_address_default"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:padding="10dp"
             android:button="@drawable/selector_checkbox_btn"
             android:textSize="13sp"
             android:text="设为默认"/>
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@color/colorTransparent"/>
-
         <TextView
             android:id="@+id/btn_item_address_modify"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
             android:background="@color/colorTransparent"
             android:drawableLeft="@mipmap/address_edit"
             android:drawablePadding="5dp"
             android:textColor="@color/colorBlackLight"
             android:textSize="13sp"
-            android:text="修改"/>
+            android:text="修改"
+            android:layout_height="wrap_content"/>
 
         <TextView
             android:id="@+id/btn_item_address_delete"
