--- a/app/src/main/res/layout/item_category__product_info.xml
+++ b/app/src/main/res/layout/item_category__product_info.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imgview_item_product_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scaleType="fitXY"
+        android:scaleType="centerInside"
         android:layout_marginTop="10dp"
         />
 
