--- a/app/src/main/res/layout/popup_address_selector.xml
+++ b/app/src/main/res/layout/popup_address_selector.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:background="@color/colorWhiterPure">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -16,8 +17,7 @@
             android:textSize="15sp"
             android:text="选择地址"
             android:drawablePadding="2dp"
-            android:drawableLeft="@mipmap/order_car"
-            />
+            android:drawableLeft="@mipmap/order_car"/>
 
         <ImageButton
             android:id="@+id/imgbtn_address_selector_popup_close"
@@ -35,74 +35,50 @@
         android:layout_height="1dp"
         android:background="@color/colorWhiteLighter"/>
 
-    <LinearLayout
+    <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <TextView
+        <RadioButton
+            android:id="@+id/radio_address_selector_city"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="8dp"
             android:layout_gravity="center_vertical"
+            android:textColor="@drawable/selector_city_selector_txt_color"
+            android:button="@null"
             android:gravity="center"
             android:textSize="15sp"
             android:text="上海市"/>
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1">
-
-            <TextView
-                android:layout_width="match_parent"
+        <RadioButton
+            android:id="@+id/radio_address_selector_area"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:padding="8dp"
+                android:button="@null"
+                android:textColor="@drawable/selector_city_selector_txt_color"
                 android:gravity="center"
                 android:textSize="15sp"
-                android:text="徐汇区"/>
+                android:text="未选择"/>
 
-            <CheckBox
-                android:layout_width="match_parent"
-                android:layout_height="4dp"
-                android:button="@null"
-                android:checked="true"
-                android:background="@drawable/selector_popup_address_check_bg"/>
-
-        </LinearLayout>
-
-
-        <LinearLayout
+        <RadioButton
+            android:id="@+id/radio_address_selector_street"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:padding="8dp"
-                android:gravity="center"
-                android:textSize="15sp"
-                android:maxLength="6"
-                android:singleLine="true"
-                android:text="田林街道"/>
-
-            <CheckBox
-                android:layout_width="match_parent"
-                android:layout_height="4dp"
-                android:button="@null"
-                android:background="@drawable/selector_popup_address_check_bg"/>
-
-        </LinearLayout>
+            android:layout_weight="1"
+            android:padding="8dp"
+            android:button="@null"
+            android:textColor="@drawable/selector_city_selector_txt_color"
+            android:gravity="center"
+            android:textSize="15sp"
+            android:text="未选择"/>
 
 
-    </LinearLayout>
+    </RadioGroup>
 
     <View
         android:layout_width="match_parent"
