--- a/app/src/main/res/layout/activity_edit_address.xml
+++ b/app/src/main/res/layout/activity_edit_address.xml
@@ -85,6 +85,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|right"
             android:background="@color/colorTransparent"
+            android:inputType="phone"
             android:textColorHint="@color/colorWhiterDarker"
             android:textSize="12sp"
             android:hint="留下您的联系方式呗"/>
