--- a/app/src/main/res/layout/item_city_selector.xml
+++ b/app/src/main/res/layout/item_city_selector.xml
@@ -7,16 +7,13 @@
 
     <TextView
         android:id="@+id/checkbox_item_city_selector_city_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:textSize="15sp"
         android:text="上海市"/>
 
-    <View
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"/>
 
     <ImageView
         android:id="@+id/imgview_item_city_selector_indicator"
