--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -65,6 +65,8 @@
                 android:layout_height="228dp"
                 app:indicator_width="8dp"
                 app:indicator_height="8dp"
+                app:indicator_drawable_selected="@drawable/shape_banner_selected_dot"
+                app:indicator_drawable_unselected="@drawable/shape_banner_unselected_dot"
                 />
 
             <android.support.v7.widget.CardView
