--- a/app/src/main/res/layout/fragment_home_page_user.xml
+++ b/app/src/main/res/layout/fragment_home_page_user.xml
@@ -43,7 +43,6 @@
                 android:scaleType="centerCrop"
                 android:src="@mipmap/product02_312_162"/>
 
-
             <TextView
                 android:id="@+id/txtview_fragment_user_name"
                 android:layout_width="wrap_content"
@@ -57,7 +56,23 @@
                 android:scrollHorizontally="true"
                 android:gravity="center"
                 android:textSize="15sp"
-                android:text="我是着急大王左右"
+                android:textColor="@color/colorWhiterPure"/>
+
+            <TextView
+                android:id="@+id/txtview_fragment_need_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:maxLines="1"
+                android:visibility="gone"
+                android:singleLine="true"
+                android:maxLength="6"
+                android:ellipsize="marquee"
+                android:scrollHorizontally="true"
+                android:gravity="center"
+                android:textSize="15sp"
+                android:text="点击登录 >"
                 android:textColor="@color/colorWhiterPure"/>
 
 
@@ -88,16 +103,8 @@
                     android:textSize="18sp"
                     android:textColor="@color/colorWhiterPure"
                     android:textStyle="bold"
-                    android:text="1489分"/>
+                    android:text="~_~"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textSize="16sp"
-                    android:textColor="@color/colorWhiterPure"
-                    android:textStyle="bold"
-                    android:text=" > "/>
 
             </LinearLayout>
 
@@ -150,7 +157,7 @@
                         android:singleLine="true"
                         android:maxEms="12"
                         android:textSize="12sp"
-                        android:text="这个是默认地址"
+                        android:text="还没任何地址"
                         />
 
                 </LinearLayout>
@@ -201,7 +208,7 @@
                         android:singleLine="true"
                         android:maxEms="12"
                         android:textSize="12sp"
-                        android:text="已添加3张卡券"
+                        android:text="还没有任何卡券"
                         />
 
                 </LinearLayout>
@@ -309,7 +316,7 @@
                         android:singleLine="true"
                         android:maxEms="12"
                         android:textSize="12sp"
-                        android:text="请绑定手机号"
+                        android:text="还没绑定手机号"
                         />
 
                 </LinearLayout>
