--- a/app/src/main/res/layout/item_popup_select_vol.xml
+++ b/app/src/main/res/layout/item_popup_select_vol.xml
@@ -11,7 +11,6 @@ android:layout_height="wrap_content">
         android:layout_gravity="center"
         android:padding="2dp"
         android:background="@drawable/shape_line_lineout"
-        android:scaleType="centerInside"
-        android:src="@mipmap/product02_312_162"/>
+        android:scaleType="centerInside"/>
 
 </FrameLayout>
