--- a/app/src/main/res/layout/popup_confirm_cancel_dialog.xml
+++ b/app/src/main/res/layout/popup_confirm_cancel_dialog.xml
@@ -4,7 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
-              android:background="@color/colorWhiterPure">
+              android:background="@drawable/shape_dialog_radius_bg">
 
 
     <TextView
