--- a/app/src/main/res/layout/popup_general_loading.xml
+++ b/app/src/main/res/layout/popup_general_loading.xml
@@ -5,7 +5,7 @@
               android:layout_height="wrap_content"
               android:padding="15dp"
               android:layout_gravity="center"
-              android:background="@color/colorWhiterPure">
+              android:background="@drawable/shape_dialog_radius_bg">
 
     <ProgressBar
         android:layout_width="wrap_content"
