--- a/app/src/main/res/layout/fragment_home_page_order_center.xml
+++ b/app/src/main/res/layout/fragment_home_page_order_center.xml
@@ -8,7 +8,7 @@
     <com.lhh.apst.library.AdvancedPagerSlidingTabStrip
         android:id="@+id/tabs_fragment_order_center_tab"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:fillViewport="false"
         style="@style/fragment_order_center_tabs"/>
 
