--- a/app/src/main/res/layout/item_category__product_info.xml
+++ b/app/src/main/res/layout/item_category__product_info.xml
@@ -10,8 +10,7 @@
     <ImageView
         android:id="@+id/imgview_item_product_img"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:scaleType="centerInside"
         android:layout_marginTop="10dp"
         />
