--- a/app/src/main/res/layout/activity_confirm_orders.xml
+++ b/app/src/main/res/layout/activity_confirm_orders.xml
@@ -40,99 +40,112 @@
                       android:layout_width="match_parent"
                       android:layout_height="match_parent">
 
-            <LinearLayout
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:background="@color/colorWhiterPure"
-                android:orientation="vertical">
+                android:layout_height="wrap_content">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="38dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:textSize="14sp"
-                        android:text="收货人："/>
-
-                    <TextView
-                        android:id="@+id/txtview_confirm_order_recipient"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:maxLines="1"
-                        android:maxLength="10"
-                        android:textSize="16sp"
-                        android:text="王皓"/>
-
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="@color/colorTransparent"/>
-
-                    <ImageButton
-                        android:id="@+id/imgbtn_confirm_order_modify_address_info"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="2dp"
-                        android:layout_gravity="center_vertical"
-                        android:background="@color/colorTransparent"
-                        android:src="@mipmap/forward"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_width="36dp"
-                        android:layout_height="28dp"
-                        android:layout_gravity="center_vertical"
-                        android:src="@mipmap/order_car"/>
+                    android:padding="10dp"
+                    android:background="@color/colorWhiterPure"
+                    android:orientation="vertical">
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_weight="1"
-                        android:layout_marginLeft="5dp"
-                        android:orientation="vertical">
+                        android:layout_marginLeft="38dp"
+                        android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/txtview_confirm_order_default_phone"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="left|center_horizontal"
-                            android:singleLine="true"
-                            android:maxLines="1"
-                            android:textSize="12sp"
-                            android:text="收货人手机号码：15223635486"/>
+                            android:layout_gravity="center_horizontal"
+                            android:textSize="14sp"
+                            android:text="收货人："/>
 
                         <TextView
-                            android:id="@+id/txtview_confirm_order_default_address"
+                            android:id="@+id/txtview_confirm_order_recipient"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="left|center_horizontal"
-                            android:singleLine="true"
+                            android:layout_gravity="center_horizontal"
                             android:maxLines="1"
-                            android:textSize="12sp"
-                            android:text="详细地址：中山西路·1600号兆丰环球科技大厦27楼C室"/>
+                            android:maxLength="10"
+                            android:textSize="16sp"/>
 
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:background="@color/colorTransparent"/>
+
+                        <ImageButton
+                            android:id="@+id/imgbtn_confirm_order_modify_address_info"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="2dp"
+                            android:layout_gravity="center_vertical"
+                            android:background="@color/colorTransparent"
+                            android:src="@mipmap/forward"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="36dp"
+                            android:layout_height="28dp"
+                            android:layout_gravity="center_vertical"
+                            android:src="@mipmap/order_car"/>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_weight="1"
+                            android:layout_marginLeft="5dp"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/txtview_confirm_order_default_phone"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="left|center_horizontal"
+                                android:singleLine="true"
+                                android:maxLines="1"
+                                android:textSize="12sp"/>
+
+                            <TextView
+                                android:id="@+id/txtview_confirm_order_default_address"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="left|center_horizontal"
+                                android:singleLine="true"
+                                android:maxLines="1"
+                                android:textSize="12sp"/>
+
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
                 </LinearLayout>
 
-            </LinearLayout>
+
+                <TextView
+                    android:id="@+id/txtview_confirm_order_add_new_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:background="@color/colorWhiterPure"
+                    android:gravity="center"
+                    android:text="还没有收货地址，点击新增 >"/>
+
+            </FrameLayout>
 
 
             <LinearLayout
@@ -240,7 +253,7 @@
                         android:id="@+id/addsubbtn_confirm_order_select_points"
                         android:layout_width="90dp"
                         android:layout_height="wrap_content"
-                        app:min_value="500"/>
+                        app:min_value="100"/>
 
 
                     <TextView
