--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -223,6 +223,7 @@
 
 
                 <LinearLayout
+                    android:id="@+id/ll_product_detail_send_time"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
