--- a/app/src/main/res/layout/add_subtraction_btn.xml
+++ b/app/src/main/res/layout/add_subtraction_btn.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
-              android:layout_width="90dp"
+              android:layout_width="120dp"
               android:layout_height="25dp"
-    android:background="@drawable/shape_add_subtraction_bg">
+              android:background="@drawable/shape_add_subtraction_bg">
 
     <TextView
         android:id="@+id/txtview_btn_subtraction"
@@ -20,7 +20,8 @@
     <EditText
         android:id="@+id/edit_input_show_num"
         android:layout_gravity="center_vertical"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="2"
         android:minWidth="30dp"
         android:layout_height="match_parent"
         android:paddingLeft="5dp"
