--- a/app/src/main/res/layout/item_confirm_order_product.xml
+++ b/app/src/main/res/layout/item_confirm_order_product.xml
@@ -36,8 +36,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textColor="@color/colorTxtBlack"
-                android:textSize="14sp"
-                android:text="优倍全家共享装（950ML）"/>
+                android:textSize="14sp"/>
 
             <TextView
                 android:id="@+id/txtview_item_confirm_order_send_mode"
@@ -45,8 +44,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textColor="@color/colorBlackLight"
-                android:textSize="12sp"
-                android:text="配送模式：每日送"/>
+                android:textSize="12sp"/>
 
             <TextView
                 android:id="@+id/txtview_item_confirm_order_send_time"
@@ -54,8 +52,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textColor="@color/colorBlackLight"
-                android:textSize="12sp"
-                android:text="配送时间：2016-03-03到2016-03-31"/>
+                android:textSize="12sp"/>
 
             <TextView
                 android:id="@+id/txtview_item_confirm_order_total_amount"
@@ -63,8 +60,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textColor="@color/colorBlackLight"
-                android:textSize="12sp"
-                android:text="总数量：40份"/>
+                android:textSize="12sp"/>
 
             <TextView
                 android:id="@+id/txtview_item_confirm_order_product_price"
@@ -72,8 +68,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textColor="@color/colorRedDarkerBtn"
-                android:textSize="12sp"
-                android:text="价格：5.0元"/>
+                android:textSize="12sp"/>
 
         </LinearLayout>
 
